# ai-code-workshop-buggy-api

./: .gitignore  DOCUMENTACION_PROYECTO_CORREGIDO.txt  LICENSE  Makefile  README.md  package.json  pyproject.toml  python_server.py
app/: auth.js  auth.py  data.js  data.py  main.py  pricing.js  pricing.py  reports.js  reports.py  server.js
docs/: 01_task_cards.md  02_prompt_patterns.md  04_facilitator_day_plan.md  05_publish_to_github.md  ai_patch_review_lab.md  prompt_journal_template.md  workshop_rubric.md
examples/: refactor-prompt-demo.js
scripts/: publish_to_github.sh  smoke.sh
tests/: conftest.py  helpers.js  pricing.test.js  regression-aggressive.test.js  regression-security.test.js  regression-validation-pricing.test.js  security.test.js  test_01_validation.py  test_02_pricing.py  test_03_security.py  test_04_refactor_safety.py  test_05_reports.py  validation.test.js
