[project]
name = "ai-code-workshop-buggy-api"
version = "0.1.0"
description = "A deliberately broken FastAPI codebase for an AI-assisted software engineering workshop."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "baseline: tasks most participants should complete",
    "extension: tasks for intermediate participants",
    "expert: tasks for senior participants",
]
